--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "mocha ./test.js",
-    "heroku-postbuild": " cd ../ && npm install && npm run build"
+    "test": "mocha ./test.js"
   },
   "proxy": "http://localhost:4000",
   "eslintConfig": {
